force-app/main/default/objects/E_MOC_TA3_Mandatory_Master__c.object
<CustomObject>
    <fields>
        <fullName>Current_Position__c</fullName>
        <label>Current Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_in_certify__c</fullName>
        <label>Date in certify</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expert_field_for__c</fullName>
        <label>Expert field for</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA3_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TA3 Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_TA3_Mandatory_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>E-MOC TA3 Mandatory Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TA3_Name__c</columns>
        <columns>Section__c</columns>
        <columns>Indicator__c</columns>
        <columns>Current_Position__c</columns>
        <columns>NAME</columns>
        <columns>Expert_field_for__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>